# ProjectBible

./: .gitignore  new_file.txt  pyproject.toml
mysite/: new_1_1.sql  new_1_3.sql  new_1_4.sql
mysite/bible/: models.py  new_1_1.sql  sevices.py  urls.py  views.py
mysite/bible/migrations/: 0001_initial.py  0002_alter_verse_options_alter_verse_book.py  0002_note.py  0002_note_verse_note.py  0003_alter_verse_testament.py  0003_note_user.py  0004_alter_verse_testament.py  0005_alter_verse_book.py  0006_book_bible_name_book_chapter_ready.py  0007_book_bible_book_bible_n_1e6c51_idx.py  0008_alter_verse_options.py  0009_alter_verse_options.py
mysite/bible/static/bible/: style.css
mysite/bible/templates/bible/: 404.html  base.html  root.html  verses.html
mysite/footnote/: models.py  urls.py  views.py
mysite/mysite/: settings.py  urls.py
mysite/sql_files/: new_1_1.sql  new_1_10.sql  new_1_2.sql  new_1_3.sql  new_1_4.sql  new_1_5.sql  new_1_6.sql  new_1_7.sql  new_1_8.sql  new_1_9.sql
mysite/users/: backends.py  forms.py  views.py
mysite/users/templates/users/: login.html  signup.html
sql_files/: new_1_13.sql  new_1_14.sql  new_1_2.sql  new_1_5.sql
