[tool.poetry]
name = "projectbible"
version = "0.1.0"
description = ""
authors = ["Анатолій <anatoliy.safonov.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
redis = "^4.5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
